// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plurals-simple-add:locales/de.json 1`] = `
"{
    also_not_0_x: also not a plural,
    brick: brick en,
    brick_plural: bricks en,
    not_plural_x: not a plural
}"
`;

exports[`plurals-simple-add:locales/en.json 1`] = `
"{
    also_not_0_x: also not a plural,
    brick: brick en,
    brick_plural: bricks en,
    not_plural_x: not a plural
}"
`;

exports[`plurals-simple-add:locales/ja.json 1`] = `
"{
    also_not_0_x: also not a plural,
    brick: bricks en,
    not_plural_x: not a plural
}"
`;

exports[`plurals-simple-add:locales/ru.json 1`] = `
"{
    also_not_0_x: also not a plural,
    brick_0: bricks en,
    brick_1: bricks en,
    brick_2: bricks en,
    not_plural_x: not a plural
}"
`;

exports[`plurals-simple-add:stderr.txt 1`] = `""`;

exports[`plurals-simple-add:stdout.txt 1`] = `
"Pushed keys to actual/locales/de.json: brick, brick_plural, not_plural_x, also_not_0_x
Pushed keys to actual/locales/ja.json: brick, not_plural_x, also_not_0_x
Pushed keys to actual/locales/ru.json: brick_0, brick_1, brick_2, not_plural_x, also_not_0_x
"
`;
